update service label (#1938)

--- a/common-applications/test-environment/community-summary/opengauss/opengauss-summary-service.yaml
+++ b/common-applications/test-environment/community-summary/opengauss/opengauss-summary-service.yaml
@@ -31,5 +31,5 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: openeuler-summary
+    app: opengauss-summary
   type: ClusterIP
