--- a/common-applications/test-environment/community-summary/mindspore/mindspore-summary-service.yaml
+++ b/common-applications/test-environment/community-summary/mindspore/mindspore-summary-service.yaml
@@ -31,5 +31,5 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: openeuler-summary
+    app: mindspore-summary
   type: ClusterIP  
