--- a/common-applications/test-environment/merlin/label/kustomization.yaml
+++ b/common-applications/test-environment/merlin/label/kustomization.yaml
@@ -12,4 +12,4 @@ resources:
 - autoscaler.yaml
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/gitea/merlin-label-test
-  newTag: main-d8e1f3
+  newTag: yw_update_md-ae618e
