--- a/common-applications/test-environment/merlin/merlin-server/kustomization.yaml
+++ b/common-applications/test-environment/merlin/merlin-server/kustomization.yaml
@@ -7,7 +7,7 @@ commonAnnotations:
   kubernetes.ops.region: shanghai
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/gitea/merlin-server-test
-  newTag: dev_list_repo-dbde34
+  newTag: main-478164
 kind: Kustomization
 namespace: merlin
 resources:
