--- a/common-applications/test-environment/merlin-02/merlin-website/deployment.yaml
+++ b/common-applications/test-environment/merlin-02/merlin-website/deployment.yaml
@@ -68,18 +68,28 @@ spec:
             cpu: 500m
             memory: 500Mi
         readinessProbe:
-          tcpSocket:
-            port: 8080
-          initialDelaySeconds: 10
           failureThreshold: 3
+          initialDelaySeconds: 30
+          periodSeconds: 30
           successThreshold: 1
-          periodSeconds: 10
-          timeoutSeconds: 5
+          httpGet:
+            scheme: HTTPS
+            path: /
+            port: 8080
+            httpHeaders:
+            - name: "Host"
+              value: "modelfoundrysh.test.osinfra.cn"
+          timeoutSeconds: 10
         livenessProbe:
-          tcpSocket:
-            port: 8080
-          initialDelaySeconds: 10
-          periodSeconds: 10
-          successThreshold: 1
           failureThreshold: 3
-          timeoutSeconds: 5
+          initialDelaySeconds: 30
+          periodSeconds: 30
+          successThreshold: 1
+          httpGet:
+            scheme: HTTPS
+            path: /
+            port: 8080
+            httpHeaders:
+            - name: "Host"
+              value: "modelfoundrysh.test.osinfra.cn"
+          timeoutSeconds: 10
