--- a/common-applications/test-environment/gitea-repo/ingress.yaml
+++ b/common-applications/test-environment/gitea-repo/ingress.yaml
@@ -4,6 +4,9 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx    
     nginx.ingress.kubernetes.io/proxy-body-size: 10G
+    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
   name: gitea-repo-ingress
   namespace: gitea-repo
 spec:
