--- a/common-applications/test-environment/gitea-repo-sh/deployment.yaml
+++ b/common-applications/test-environment/gitea-repo-sh/deployment.yaml
@@ -62,7 +62,12 @@ spec:
         volumeMounts:
         - mountPath: /var/lib/gitea/
           name: data-volume
+        - mountPath: /tmp/
+          name: tmp-gitea-data-volume
       volumes:
       - name: data-volume
         persistentVolumeClaim:
           claimName: gitea-repo-data-volume
+      - name: tmp-gitea-data-volume
+        persistentVolumeClaim:
+          claimName: tmp-gitea-data-volume
