update mindspore usercenter-website:test-64ec45

--- a/common-applications/test-environment/modelfoundry-usercenter-website/kustomization.yaml
+++ b/common-applications/test-environment/modelfoundry-usercenter-website/kustomization.yaml
@@ -16,4 +16,4 @@ resources:
 - secret.yaml
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/gitea/modelfoundry-usercenter-website
-  newTag: test-c5e9e9
+  newTag: test-64ec45
