--- a/common-applications/test-environment/merlin/merlin-website/kustomization.yaml
+++ b/common-applications/test-environment/merlin/merlin-website/kustomization.yaml
@@ -15,4 +15,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/gitea/merlin-website-test
-  newTag: main-9d921c
+  newTag: main-1d6651
