update easyeditor website:openeuler-a70c4f

--- a/common-applications/test-environment/openeuler-easyeditor/website/kustomization.yaml
+++ b/common-applications/test-environment/openeuler-easyeditor/website/kustomization.yaml
@@ -14,4 +14,4 @@ kind: Kustomization
 namespace: openeuler-easyeditor
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/easyeditor/website-test
-  newTag: openeuler-81e4f4
+  newTag: openeuler-a70c4f
