--- a/common-applications/test-environment/openeuler-devops/user-management/kustomization.yaml
+++ b/common-applications/test-environment/openeuler-devops/user-management/kustomization.yaml
@@ -7,7 +7,7 @@ commonAnnotations:
   kubernetes.ops.region: shanghai
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-devops/user_management
-  newTag: master-dbbd44
+  newTag: v1.0.20231228191031
 kind: Kustomization
 namespace: openeuler-devops
 resources:
