add openeuler-devops post-extract-handler (#1943)

--- a/common-applications/test-environment/openeuler-devops/kustomization.yaml
+++ b/common-applications/test-environment/openeuler-devops/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
 - workflow-runner
 - event-selector
 - workflow-event-handler
-- workflow-template-handler
+- post-extract-handler
 - job-event-handler
 - job-status-handler
 - user-management
