--- a/common-applications/test-environment/openeuler-devops/post-extract-handler/kustomization.yaml
+++ b/common-applications/test-environment/openeuler-devops/post-extract-handler/kustomization.yaml
@@ -7,7 +7,7 @@ commonAnnotations:
   kubernetes.ops.region: shanghai
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-devops/post_extract_handler
-  newTag: master-4aaaa3
+  newTag: v1.0.20231229110258
 kind: Kustomization
 namespace: openeuler-devops
 resources:
