--- a/common-applications/test-environment/openeuler-usercenter/kustomization.yaml
+++ b/common-applications/test-environment/openeuler-usercenter/kustomization.yaml
@@ -22,7 +22,8 @@ images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-usercenter-server-test
   newTag: v1.0.20231226195222
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-usercenter-test
-  newTag: c8613b995764002ed7ddb4f5f76dda46d7e7bc17
+  newName: swr.ap-southeast-1.myhuaweicloud.com/infra-hk/openeuler/openeuler-usercenter-test
+  newTag: ba6abec00b6163e833ce5f9394f08d394ac84aa6
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/opengauss/opengauss-usercenter-test
   newName: swr.ap-southeast-1.myhuaweicloud.com/infra-hk/opengauss/opengauss-usercenter-test
   newTag: 35318f0e4d5f4139bf9046f270e9c94101f9c8b8
