--- a/common-applications/test-environment/openguardfuzz-webserver/webserver/kustomization.yaml
+++ b/common-applications/test-environment/openguardfuzz-webserver/webserver/kustomization.yaml
@@ -7,7 +7,7 @@ commonAnnotations:
   kubernetes.ops.region: hk
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openguardfuzz-webserver
-  newTag: test-04aaf3
+  newTag: test-dc9b7d
 kind: Kustomization
 namespace: openguardfuzz-webserver
 resources:
