--- a/common-applications/test-environment/openeuler-cn4-copr/secrets.yaml
+++ b/common-applications/test-environment/openeuler-cn4-copr/secrets.yaml
@@ -48,6 +48,15 @@ spec:
     kubeconfig:
       path: secrets/data/infra-common/copr
       key: kubeconfig
+    IAM_DOMAIN:
+      path: secrets/data/infra-common/copr
+      key: IAM_DOMAIN
+    IAM_USER:
+      path: secrets/data/infra-common/copr
+      key: IAM_USER
+    IAM_PASSWORD:
+      path: secrets/data/infra-common/copr
+      key: IAM_PASSWORD
 
 ---
 apiVersion: secrets-manager.tuenti.io/v1alpha1
