--- a/common-applications/test-environment/openeuler-devops/pvc.yaml
+++ b/common-applications/test-environment/openeuler-devops/pvc.yaml
@@ -190,3 +190,19 @@ spec:
       storage: 1Gi
   storageClassName: csi-disk
   volumeMode: Filesystem
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  annotations:
+    everest.io/disk-volume-type: ssd
+  name: etcd-data-volume
+  namespace: openeuler-devops
+spec:
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 100Gi
+  storageClassName: csi-disk
+  volumeMode: Filesystem
