--- a/common-applications/test-environment/openeuler-devops/pods-monitor/deployment.yaml
+++ b/common-applications/test-environment/openeuler-devops/pods-monitor/deployment.yaml
@@ -1,12 +1,12 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: workflow-runner-deployment
+  name: pods-monitor-deployment
   namespace: openeuler-devops
 spec:
   selector:
     matchLabels:
-      app: workflow-runner
+      app: pods-monitor
   strategy:
     rollingUpdate:
       maxUnavailable: 1
@@ -26,11 +26,11 @@ spec:
           {{- with secret "internal/data/infra-test/openeuler-devops" -}}  
           {{ .Data.data.config }}
           {{- end }}
-        vault.hashicorp.com/agent-inject-secret-esca: 'internal/data/infra-test/openeuler-devops'
-        vault.hashicorp.com/agent-inject-perms-esca: "0400"        
-        vault.hashicorp.com/agent-inject-template-esca: |  
+        vault.hashicorp.com/agent-inject-secret-openeuler-devops.conf: 'internal/data/infra-test/openeuler-devops'
+        vault.hashicorp.com/agent-inject-perms-openeuler-devops.conf: "0400"        
+        vault.hashicorp.com/agent-inject-template-openeuler-devops.conf: |  
           {{- with secret "internal/data/infra-test/openeuler-devops" -}}  
-          {{ .Data.data.esCA }}
+          {{ .Data.data.kubeconfig }}
           {{- end }}
         vault.hashicorp.com/agent-inject-secret-etcd_server.crt: 'internal/data/infra-test/openeuler-devops'
         vault.hashicorp.com/agent-inject-perms-etcd_server.crt: "0400"
@@ -51,30 +51,19 @@ spec:
           {{ .Data.data.etcdCA }}
           {{- end }}
       labels:
-        app: workflow-runner
+        app: pods-monitor
     spec:
       serviceAccount: openeuler-devops
       imagePullSecrets:
       - name: huawei-swr-image-pull-secret
       containers:
-      - image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-devops/workflow_runner:master-118a1e
-        imagePullPolicy: IfNotPresent 
-        args:
-        - --enable_debug=true        
-        volumeMounts:
-        - mountPath: /srv/log
-          name: workflow-runner-data-volume
-        env:
-        - name: LOG_ROOT_DIR
-          value: "/srv/log"
-        - name: DEFAULT_ODS
-          value: "/opt/ods"
-        - name: WORKFLOW_RUNNER_NAME
-          valueFrom:
-            fieldRef:
-              apiVersion: v1
-              fieldPath: metadata.name
-        name: workflow-runner
+      - args:
+        - --SECRETS_CONFIG=/etc/ods/secrets.yaml
+        - --KUBE_CONFIG=/etc/ods/openeuler-devops.conf
+        - --KUBE_NAMESPACE=openeuler-devops
+        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/openeuler/openeuler-devops/pods_monitor:new
+        imagePullPolicy: IfNotPresent
+        name: pods-monitor
         resources:
           limits:
             cpu: 500m
@@ -82,7 +71,3 @@ spec:
           requests:
             cpu: 500m
             memory: 500Mi
-      volumes:
-        - name: workflow-runner-data-volume
-          persistentVolumeClaim:
-            claimName: workflow-runner-data-volume
