--- a/common-applications/test-environment/openeuler-devops/workflow-event-handler/deployment.yaml
+++ b/common-applications/test-environment/openeuler-devops/workflow-event-handler/deployment.yaml
@@ -32,6 +32,24 @@ spec:
           {{- with secret "internal/data/infra-test/openeuler-devops" -}}  
           {{ .Data.data.esCA }}
           {{- end }}
+        vault.hashicorp.com/agent-inject-secret-etcd_server.crt: 'internal/data/infra-test/openeuler-devops'
+        vault.hashicorp.com/agent-inject-perms-etcd_server.crt: "0400"
+        vault.hashicorp.com/agent-inject-template-etcd_server.crt: |  
+          {{- with secret "internal/data/infra-test/openeuler-devops" -}}  
+          {{ .Data.data.etcdCrt }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-etcd_server.key: 'internal/data/infra-test/openeuler-devops'
+        vault.hashicorp.com/agent-inject-perms-etcd_server.key: "0400"
+        vault.hashicorp.com/agent-inject-template-etcd_server.key: |  
+          {{- with secret "internal/data/infra-test/openeuler-devops" -}}  
+          {{ .Data.data.etcdKey }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-etcd_ca.crt: 'internal/data/infra-test/openeuler-devops'
+        vault.hashicorp.com/agent-inject-perms-etcd_ca.crt: "0400"
+        vault.hashicorp.com/agent-inject-template-etcd_ca.crt: |  
+          {{- with secret "internal/data/infra-test/openeuler-devops" -}}  
+          {{ .Data.data.etcdCA }}
+          {{- end }}
       labels:
         app: workflow-event-handler
     spec:
