--- a/common-applications/om/om-webserver-test/kustomization.yaml
+++ b/common-applications/om/om-webserver-test/kustomization.yaml
@@ -12,4 +12,4 @@ kind: Kustomization
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/om/om-webserver
   newName: swr.cn-north-4.myhuaweicloud.com/om/om-webserver-test
-  newTag: test-pwd-a8baee
+  newTag: test-pwd-4da334
