--- a/common-applications/test-environment/om-webserver-test/kustomization.yaml
+++ b/common-applications/test-environment/om-webserver-test/kustomization.yaml
@@ -14,4 +14,4 @@ images:
   newName: swr.cn-north-4.myhuaweicloud.com/om/om-webserver-test
   newTag: oneid-webserver-41f8dc
 - name: swr.cn-north-4.myhuaweicloud.com/om/om-webserver-test
-  newTag: test-pwd-a8baee
+  newTag: test-pwd-4da334
