--- a/common-applications/test-environment/openeuler-cn4-copr/resalloc/deployment.yaml
+++ b/common-applications/test-environment/openeuler-cn4-copr/resalloc/deployment.yaml
@@ -18,8 +18,8 @@ spec:
       - command:
         - /bin/sh
         - -c
-        - 'chmod 550 /home/resalloc/provision/local-delete /home/resalloc/provision/local-new-x86
-          /home/resalloc/provision/local-new-aarch64 /home/resalloc/provision/check-pod; install -m 400 /root/.ssh/id_rsa-ro
+        - 'chmod 550 /home/resalloc/provision/local-* /home/resalloc/provision/check-pod;
+          install -m 400 /root/.ssh/id_rsa-ro
           /root/.ssh/id_rsa; ln -sf /dev/stdout /var/log/resallocserver/main.log;
           exec /usr/bin/resalloc-server; '
         env:
