--- a/common-applications/test-environment/openeuler-devops/etcd-own/deployment.yaml
+++ b/common-applications/test-environment/openeuler-devops/etcd-own/deployment.yaml
@@ -21,15 +21,15 @@ spec:
         vault.hashicorp.com/agent-run-as-user: "1000"
         vault.hashicorp.com/agent-run-as-group: "1000"
         vault.hashicorp.com/secret-volume-path: "/etc/ods/"
-        vault.hashicorp.com/agent-inject-secret-etcd_server.crt: 'internal/data/infra-test/openeuler-devops'
-        vault.hashicorp.com/agent-inject-perms-etcd_server.crt: "0400"
-        vault.hashicorp.com/agent-inject-template-etcd_server.crt: |  
+        vault.hashicorp.com/agent-inject-secret-etcd_client.crt: 'internal/data/infra-test/openeuler-devops'
+        vault.hashicorp.com/agent-inject-perms-etcd_client.crt: "0400"
+        vault.hashicorp.com/agent-inject-template-etcd_client.crt: |  
           {{- with secret "internal/data/infra-test/openeuler-devops" -}}  
           {{ .Data.data.etcdCrt }}
           {{- end }}
-        vault.hashicorp.com/agent-inject-secret-etcd_server.key: 'internal/data/infra-test/openeuler-devops'
-        vault.hashicorp.com/agent-inject-perms-etcd_server.key: "0400"
-        vault.hashicorp.com/agent-inject-template-etcd_server.key: |  
+        vault.hashicorp.com/agent-inject-secret-etcd_client.key: 'internal/data/infra-test/openeuler-devops'
+        vault.hashicorp.com/agent-inject-perms-etcd_client.key: "0400"
+        vault.hashicorp.com/agent-inject-template-etcd_client.key: |  
           {{- with secret "internal/data/infra-test/openeuler-devops" -}}  
           {{ .Data.data.etcdKey }}
           {{- end }}
@@ -38,6 +38,24 @@ spec:
         vault.hashicorp.com/agent-inject-template-etcd_ca.crt: |  
           {{- with secret "internal/data/infra-test/openeuler-devops" -}}  
           {{ .Data.data.etcdCA }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-etcd_peer.crt: 'internal/data/infra-test/openeuler-devops'
+        vault.hashicorp.com/agent-inject-perms-etcd_peer.crt: "0400"
+        vault.hashicorp.com/agent-inject-template-etcd_peer.crt: |  
+          {{- with secret "internal/data/infra-test/openeuler-devops" -}}  
+          {{ .Data.data.etcdPeerCrt }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-etcd_peer.key: 'internal/data/infra-test/openeuler-devops'
+        vault.hashicorp.com/agent-inject-perms-etcd_peer.key: "0400"
+        vault.hashicorp.com/agent-inject-template-etcd_peer.key: |  
+          {{- with secret "internal/data/infra-test/openeuler-devops" -}}  
+          {{ .Data.data.etcdPeerKey }}
+          {{- end }}
+        vault.hashicorp.com/agent-inject-secret-etcd.yaml: 'internal/data/infra-test/openeuler-devops'
+        vault.hashicorp.com/agent-inject-perms-etcd.yaml: "0400"
+        vault.hashicorp.com/agent-inject-template-etcd.yaml: |  
+          {{- with secret "internal/data/infra-test/openeuler-devops" -}}  
+          {{ .Data.data.etcdConfig }}
           {{- end }}
       labels:
         app: etcd-own
@@ -52,6 +70,8 @@ spec:
         env:
         - name: ETCD_UNSUPPORTED_ARCH
           value: arm64
+        - name: ETCD_CONFIG_FILE
+          value: "/etc/ods/etcd.yaml"
         resources:
           limits:
             cpu: 500m
