--- a/common-applications/control/community-etherpad/mindspore/secret.yaml
+++ b/common-applications/control/community-etherpad/mindspore/secret.yaml
@@ -42,3 +42,68 @@ spec:
       key: port
       path: secrets/data/infra-common/mindspore-etherpad
   name: ether-secret
+
+---
+apiVersion: secrets-manager.tuenti.io/v1alpha1
+kind: SecretDefinition
+metadata:
+  name: ether-secret-v2
+  namespace: mindspore-etherpad
+spec:
+  keysMap:
+    admin_password:
+      key: admin_password_v2
+      path: secrets/data/infra-common/mindspore-etherpad
+    db_password:
+      key: db_password_v2
+      path: secrets/data/infra-common/mindspore-etherpad
+    user_password:
+      key: user_password_v2
+      path: secrets/data/infra-common/mindspore-etherpad
+    skin:
+      key: skin_v2
+      path: secrets/data/infra-common/mindspore-etherpad
+    env:
+      key: env_v2
+      path: secrets/data/infra-common/mindspore-etherpad
+    db_type:
+      key: db_type_v2
+      path: secrets/data/infra-common/mindspore-etherpad
+    db_host:
+      key: db_host_v2
+      path: secrets/data/infra-common/mindspore-etherpad
+    db_port:
+      key: db_port_v2
+      path: secrets/data/infra-common/mindspore-etherpad
+    db_name:
+      key: db_name_v2
+      path: secrets/data/infra-common/mindspore-etherpad
+    db_user:
+      key: db_user_v2
+      path: secrets/data/infra-common/mindspore-etherpad
+    db_charset:
+      key: db_charset_v2
+      path: secrets/data/infra-common/mindspore-etherpad
+    port:
+      key: port_v2
+      path: secrets/data/infra-common/mindspore-etherpad
+  name: ether-secret-v2
+
+---
+apiVersion: secrets-manager.tuenti.io/v1alpha1
+kind: SecretDefinition
+metadata:
+  name: etherpad-mindspore-v2-tls
+  namespace: mindspore-etherpad
+spec:
+  keysMap:
+    ca.crt:
+      key: ca.cert
+      path: secrets/data/mindspore/mindspore-cn-tls
+    tls.crt:
+      key: ca.cert
+      path: secrets/data/mindspore/mindspore-cn-tls
+    tls.key:
+      key: ca.key
+      path: secrets/data/mindspore/mindspore-cn-tls
+  name: etherpad-mindspore-v2-tls
