--- a/common-applications/control/community-etherpad/openeuler/secret.yaml
+++ b/common-applications/control/community-etherpad/openeuler/secret.yaml
@@ -61,3 +61,49 @@ spec:
       key: server.key
       path: secrets/data/openeuler/openeuler-org-tls
   name: etherpad-openeuler-tls
+
+---
+apiVersion: secrets-manager.tuenti.io/v1alpha1
+kind: SecretDefinition
+metadata:
+  name: ether-secret-v2
+  namespace: openeuler-etherpad
+spec:
+  keysMap:
+    admin_password:
+      key: admin_password_v2
+      path: secrets/data/infra-common/openeuler-etherpad
+    db_password:
+      key: db_password_v2
+      path: secrets/data/infra-common/openeuler-etherpad
+    user_password:
+      key: user_password_v2
+      path: secrets/data/infra-common/openeuler-etherpad
+    skin:
+      key: skin_v2
+      path: secrets/data/infra-common/openeuler-etherpad
+    env:
+      key: env_v2
+      path: secrets/data/infra-common/openeuler-etherpad
+    db_type:
+      key: db_type_v2
+      path: secrets/data/infra-common/openeuler-etherpad
+    db_host:
+      key: db_host_v2
+      path: secrets/data/infra-common/openeuler-etherpad
+    db_port:
+      key: db_port_v2
+      path: secrets/data/infra-common/openeuler-etherpad
+    db_name:
+      key: db_name_v2
+      path: secrets/data/infra-common/openeuler-etherpad
+    db_user:
+      key: db_user_v2
+      path: secrets/data/infra-common/openeuler-etherpad
+    db_charset:
+      key: db_charset_v2
+      path: secrets/data/infra-common/openeuler-etherpad
+    port:
+      key: port_v2
+      path: secrets/data/infra-common/openeuler-etherpad
+  name: ether-secret-v2
