--- a/common-applications/control/community-etherpad/openlookeng/ingress.yaml
+++ b/common-applications/control/community-etherpad/openlookeng/ingress.yaml
@@ -19,8 +19,8 @@ spec:
     http:
       paths:
       - backend:
-          serviceName: etherpad-lite
-          servicePort: 80
+          serviceName: etherpad-lite-v2
+          servicePort: 9001
         path: /
   tls:
   - hosts:
