--- a/common-applications/control/community-etherpad/openeuler/pvc.yaml
+++ b/common-applications/control/community-etherpad/openeuler/pvc.yaml
@@ -13,3 +13,19 @@ spec:
   resources:
     requests:
       storage: 1Gi
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: ether-data-vol-v2
+  namespace: openeuler-etherpad
+  annotations:
+    everest.io/disk-volume-type: SSD
+spec:
+  storageClassName: "csi-disk-sas"
+  accessModes:
+  - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
