--- a/common-applications/control/community-etherpad/openlookeng/service.yaml
+++ b/common-applications/control/community-etherpad/openlookeng/service.yaml
@@ -13,3 +13,19 @@ spec:
     app: control-etherpad
   sessionAffinity: None
   type: ClusterIP
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: etherpad-lite-v2
+  namespace: openlookeng-etherpad
+spec:
+  ports:
+  - name: ether-http
+    port: 9001
+    protocol: TCP
+    targetPort: 9001
+  selector:
+    app: control-etherpad-v2
+  type: LoadBalancer
