--- a/common-applications/test-environment/opengauss-website-revision/website/kustomization.yaml
+++ b/common-applications/test-environment/opengauss-website-revision/website/kustomization.yaml
@@ -1,13 +1,11 @@
 resources:
-- ingress.yaml
 - service.yaml
 - deployment.yaml
 - autoscaler.yaml
-- secret.yaml
 namespace: opengauss-website-revision
 commonAnnotations:
   kubernetes.ops.cluster: test
-  kubernetes.ops.email: ilong8@qq.com
+  kubernetes.ops.email: ""
   kubernetes.ops.os.base: openeuler
   kubernetes.ops.owner: ailong
   kubernetes.ops.region: hk
