--- a/common-applications/om/om-webserver-oneid/kustomization.yaml
+++ b/common-applications/om/om-webserver-oneid/kustomization.yaml
@@ -16,4 +16,4 @@ kind: Kustomization
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/om/om-webserver
   newName: swr.cn-north-4.myhuaweicloud.com/om/om-webserver-prod
-  newTag: test-pwd-8610a0
+  newTag: test-pwd-72d14c
